tests/fail_copy_without_share.rte.rte
function main() {
  def !x = new 42;
  def y = x; // error: read privilege requires no writers
  *x = 0;
  return *y;
}
